# opentypespec-py

./: Makefile  README.md  pyproject.toml  setup.cfg  setup.py  update.py
opentypespec/: __init__.py
opentypespec/tags/: languages.py  scripts.py
tests/: test_tags.py
